# back/src/entities/cart.py
@@ -1,0 +1,12 @@
+from pydantic import BaseModel
+from typing import List
+
+
+class Report(BaseModel):
+    count: int
+    price: float
+    product_id: int
+
+
+class Cart(BaseModel):
+    report: List[Report]
