# back/src/views/carts/reports.py
@@ -3,7 +3,7 @@ from src.di import injector
 from rest_framework import serializers
 from rest_framework.schemas.openapi import AutoSchema
 from src.drivers.file_uploader import FileUploader
-from ..models import Cart, User
+from ...models import Report, User
 from django.http import Http404, HttpRequest
 from rest_framework.views import APIView
 from rest_framework.response import Response
@@ -20,23 +20,20 @@ logger = logging.getLogger(__name__)
 
 class CustomSchema(AutoSchema):
     def get_serializer(self, path, method):
-        return CartSerializer()
+        return ReportSerializer()
 
 
-class CartSerializer(serializers.ModelSerializer):
-    image = serializers.ImageField()
-
+class ReportSerializer(serializers.ModelSerializer):
     class Meta:
-        model = Cart
-        fields = ["pk", "name", "description", "image", "price", "user"]
+        model = Report
+        fields = ["id"]
 
 
-class CartList(APIView):
+class ReportList(APIView):
     schema = CustomSchema()
 
     def get(self, request: HttpRequest, format=None):
-        return Response(request.session["hello"])
+        return Response("hello")
 
     def put(self, request: HttpRequest, format=None):
-        request.session["hello"] = "world"
         return Response(status=status.HTTP_200_OK)
